--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,10 @@
 	<groupId>io.github.leonilsouza</groupId>
 	<artifactId>api-pedido</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>api-pedido</name>
 	<description>Api project for Spring Boot</description>
+	
 
 	<properties>
 		<java.version>11</java.version>
