Configuração e envio do projeto para produção

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= mysql://b66f92a01c4873:8d2b43ed@us-cdbr-east-02.cleardb.com/heroku_06738a64c29d357?reconnect=true
+spring.datasource.url= mysql://wn0c1wkhugu8f2uk:dxblvgi8g0w182bf@sm9j2j5q6c8bpgyq.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/u4zuzdsdkr6fh50y?reconnect=true
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
