--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -11,3 +11,13 @@ spring.h2.console.path=/h2-console
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=leonilsouza@gmail.com
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.socketFactory.port = 465
+spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback = false
+spring.mail.properties.mail.smtp.starttls.enable = true
+spring.mail.properties.mail.smtp.ssl.enable = true
